# tilepad-desktop

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  cspell.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vitest.config.ts
.github/workflows/: publish.yml
.storybook/: main.ts  preview.ts
core/plugins/: README.md
core/plugins/com.jacobtread.tilepad.navigation.tilePlugin/: manifest.toml
core/plugins/com.jacobtread.tilepad.system.navigation.tilePlugin/: manifest.toml
core/plugins/com.tilepad.system.navigation.tilePlugin/: manifest.json  manifest.toml
core/plugins/com.tilepad.system.navigation.tilePlugin/ui/: switch-folder.html  switch-profile.html
core/plugins/com.tilepad.system.system.tilePlugin/: manifest.json  manifest.toml
core/plugins/com.tilepad.system.system.tilePlugin/ui/: clipboard.html  close-app.html  hotkey.html  multimedia.html  open-app.html  open-folder.html  open-website.html  text.html
crates/tilepad-plugin-sdk/: Cargo.toml
display/: README.md  esbuild.mjs  package.json  tsconfig.json
display/src/: display.ts  events.ts  plugin.ts  styles.css  tile.ts  utils.ts
inspector/: README.md  esbuild.mjs  inspector.d.ts  package-lock.json  package.json  tsconfig.json
inspector/src/: eventEmitter.js  eventEmitter.ts  events.ts  inspector.js  plugin.ts  styles.css  tile.ts  utils.ts
scripts/: generate-licenses.mjs
src/: app.html  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: actions.rs  devices.rs  folders.rs  fonts.rs  icons.rs  mod.rs  plugins.rs  profiles.rs  server.rs  tiles.rs
src-tauri/src/database/: helpers.rs  mod.rs
src-tauri/src/database/entity/: device.rs  folder.rs  mod.rs  plugin_properties.rs  profile.rs  settings.rs  tile.rs
src-tauri/src/database/migration/: m20250209_053952_create_profile_table.rs  mod.rs
src-tauri/src/database/migrations/: m202502251151_create_profiles_table.rs  m202502251151_create_profiles_table.sql  m202502251153_create_folders_table.rs  m202502251153_create_folders_table.sql  m202502251225_create_tiles_table.rs  m202502251225_create_tiles_table.sql  m202502251226_create_devices_table.rs  m202502251226_create_devices_table.sql  m202503210907_create_plugin_properties.rs  m202503210907_create_plugin_properties.sql  m202504281419_create_settings_table.rs  mod.rs  schema.rs
src-tauri/src/device/: mod.rs  protocol.rs  session.rs  socket.rs
src-tauri/src/events/: mod.rs  processing.rs
src-tauri/src/fonts/: mod.rs
src-tauri/src/icons/: install.rs  loader.rs  mod.rs
src-tauri/src/models/: commands.rs  events.rs  mod.rs
src-tauri/src/plugin/: action.rs  install.rs  loader.rs  manifest.rs  mod.rs  node.rs  protocol.rs  runner.rs  runtime.rs  session.rs  socket.rs  tasks.rs
src-tauri/src/plugin/internal/: actions.rs  messages.rs  mod.rs
src-tauri/src/plugin/internal/navigation/: actions.rs  messages.rs
src-tauri/src/plugin/internal/system/: actions.rs  messages.rs
src-tauri/src/plugin/node/: arch.rs  download.rs  mod.rs
src-tauri/src/plugin/runtime/: download.rs  mod.rs
src-tauri/src/server/: http_content.rs  mod.rs
src-tauri/src/server/extractors/: enforce_local_socket.rs  mod.rs
src-tauri/src/server/models/: error.rs  server.rs
src-tauri/src/server/resources/: propertyInspectorScript.js  propertyInspectorStyles.css
src-tauri/src/server/routes/: dev.rs  devices.rs  fonts.rs  icons.rs  mod.rs  plugins.rs  server.rs
src-tauri/src/tile/: mod.rs
src-tauri/src/utils/: device.rs  display.rs  encryption.rs  error.rs  file.rs  inspector.rs  mod.rs  random.rs  tracing.rs  ws.rs  ws_msgpack.rs  zip.rs
src/lib/: types.ts
src/lib/api/: _template.ts  actions.ts  devices.ts  folders.ts  fonts.ts  icons.ts  icons_registry.ts  plugins.ts  plugins_registry.ts  profiles.ts  server.ts  tiles.ts
src/lib/api/actions/: actions.keys.ts  actions.mutators.ts  actions.queries.ts  actions.requests.ts  index.ts
src/lib/api/devices/: devices.events.ts  devices.keys.ts  devices.mutations.ts  devices.mutators.ts  devices.queries.ts  devices.requests.ts  index.ts
src/lib/api/folders/: folders.keys.ts  folders.mutations.ts  folders.mutators.ts  folders.queries.ts  folders.requests.ts  index.ts
src/lib/api/fonts/: fonts.keys.ts  fonts.queries.ts  fonts.requests.ts  index.ts
src/lib/api/icons/: icons.keys.ts  icons.mutations.ts  icons.mutators.ts  icons.queries.ts  icons.requests.ts  index.ts
src/lib/api/icons_registry/: icons_registry.keys.ts  icons_registry.mutations.ts  icons_registry.queries.ts  icons_registry.requests.ts  index.ts
src/lib/api/plugins/: index.ts  plugins.events.ts  plugins.keys.ts  plugins.mutations.ts  plugins.mutators.ts  plugins.queries.ts  plugins.requests.ts
src/lib/api/plugins_registry/: index.ts  plugins_registry.keys.ts  plugins_registry.mutations.ts  plugins_registry.queries.ts  plugins_registry.requests.ts
src/lib/api/profiles/: index.ts  profiles.keys.ts  profiles.mutations.ts  profiles.queries.ts  (+2 more)
src/lib/components/: Aside.stories.svelte  CreatorSection.stories.svelte  CreatorSection.svelte  I18nProvider.svelte  InternalServerProvider.svelte  SettingsLoader.svelte  SettingsProvider.svelte  Tooltip.stories.svelte  Tooltip.svelte  UpdateNotification.svelte
src/lib/contexts/: server.context.ts
src/lib/i18n/: en.json
src/lib/layouts/: RootLayout.svelte
src/lib/styles/: app.css
src/lib/utils/: browser.ts  fingerprint.test.ts  fingerprint.ts  iframeBlocker.svelte.ts  localStorage.svelte.ts  markdown.test.ts  markdown.ts  mutex.test.ts  mutex.ts  resizable.ts  virtualization.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(home)/: +layout.svelte  +page.svelte
src/routes/dev-fields/: +page.svelte
src/routes/devices/: +page.svelte
src/routes/icons/: +page.svelte
src/routes/plugins/: +page.svelte
src/routes/settings/: +page.svelte
(+159 files in other folders)
