[package]
name = "tilepad-desktop"
version = "0.0.2"
description = "Tilepad desktop app"
authors = ["Jacobtread"]
edition = "2024"
repository = "https://github.com/TilePad/tilepad-desktop"
readme = "../README.md"
homepage = "https://tilepad.pages.dev/"
license = "MIT"
keywords = ["macropad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tilepad_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.2.0", features = [] }

[dependencies]
# Tauri and plugins
tauri = { version = "=2.5.1", features = ["tray-icon"] }
tauri-plugin-opener = "=2.3.0"
tauri-plugin-single-instance = { version = "=2.2.4", features = ["deep-link"] }
tauri-plugin-deep-link = "=2.3.0"
tauri-plugin-updater = "=2.8.1"
tauri-plugin-autostart = "=2.4.0"

# Serialization
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

# Validation
garde = { version = "=0.22.0", features = ["full"] }

# Error handling
anyhow = "=1.0.98"
thiserror = "=2.0.12"

# Async runtime and helpers
tokio = { version = "=1.45.1", features = ["full"] }
tokio-util = { version = "=0.7.15", features = ["full"] }
futures = "=0.3.31"

# Mime type guessing for file serving
mime_guess = "=2.0.5"

# HTTP
axum = { version = "=0.8.4", features = ["ws"] }
tower-http = { version = "=0.6.6", features = ["cors"] }
reqwest = { version = "=0.12.20", features = ["json"] }

# Files
tempfile = "=3.20.0"
sanitize-filename = "=0.6.0"
async_zip = { version = "=0.0.17", features = ["full", "tokio"] }

# Tracing / logging
tracing = { version = "=0.1.41", features = ["log"] }
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "json"] }
tracing-appender = "=0.2.3"

# Rolling files for logging efficiently
rolling-file = "=0.2.0"

# Random number generation for access tokens
rand = "=0.9.1"

# Efficient non async locks
parking_lot = "=0.12.4"

# Date time for time keeping and date storage
chrono = { version = "=0.4.41", features = ["serde"] }

# Node specific semver versioning for node installs 
node-semver = "=2.2.0"

# UUIDv4 for unique IDs
uuid = { version = "=1.17.0", features = ["v4"] }

# Get local addresses for LAN 
local-ip-address = "=0.6.5"

# System info library
sysinfo = "=0.35.2"

# Virtual keyboard for build in actions
enigo = "=0.5.0"

# Clipboard access for built in actions
arboard = "=3.5.0"

# File dialogs for file picker prompts
rfd = { version = "=0.15.3", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }

tilepad-manifest = "=0.7.0"

# Manifest definitions
# Database of fonts and getting system fonts
fontdb = "=0.23.0"

# Used to get the friendly name of the users device
nick-name = "=0.1.2"

# Message pack serialization
rmp-serde = "=1.3.0"

# Encryption cipher
chacha20poly1305 = "=0.10.1"

# Key exchange x25519
x25519-dalek = { version = "=2.0.1", features = [
    "getrandom",
    "static_secrets",
] }

# Database dependencies
[dependencies.sqlx]
version = "=0.8.6"
default-features = false
features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json", "macros"]
